# hindsight-cookbook

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cable-co/: CLAUDE.md  README.md
chat-memory/: package.json
chat-memory-cloud/: README.md  package.json
claims-iq/: README.md
delivery-agent-demo/: .env.example  .gitignore  QUICKSTART.md  README.md  agent.py  agent_tools.py  app.py  building.py  evaluation.py  game_renderer.py  memory.py  requirements.txt  run.sh  run_eval_test.py
deliveryman-demo/: .gitignore  CLAUDE.md  README.md
demos/: README.md  fitness_tracker.py  healthcare_assistant.ipynb  healthcare_assistant.py  movie_recommendation.ipynb  movie_recommendation.py  personal_assistant.ipynb  personal_assistant.py  personalized_search.py  requirements.txt  study_buddy.py
examples/: hindsight_litellm_demo.py  hindsight_tool_learning_demo.py
hindsight-litellm-demo/: README.md  app.py
hindsight-tool-learning-demo/: app.py  requirements.txt
notebooks/: .env.example  01-quickstart.ipynb  02-per-user-memory.ipynb  03-support-agent-shared-knowledge.ipynb  04-litellm-memory-demo.ipynb  05-tool-learning-demo.ipynb  06-langgraph-react-agent.ipynb  07-langchain-memory.ipynb  08-llamaindex-react-agent.ipynb  09-autogen-assistant-agent.ipynb  10-openai-agents-memory.ipynb  11-superagent-safe-memory.ipynb  fitness_tracker.ipynb  haystack-agent-memory.ipynb  healthcare_assistant.ipynb  movie_recommendation.ipynb  personal_assistant.ipynb  personalized_search.ipynb  study_buddy.ipynb
notebooks/tests-notebooks/: pyproject.toml
recipes/: go-quickstart.md  (+1 more)
(+337 files in other folders)
