[project]
name = "tests-notebooks"
version = "0.1.0"
description = "Notebook tests for Hindsight cookbook"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "nbmake>=1.5",
    # Notebook dependencies (also installed via !pip in notebooks for interactive use)
    "hindsight-client",
    "hindsight-litellm",
    "litellm",
    "nest-asyncio",
    "openai",
    "python-dotenv",
    "requests",
]

[tool.pytest.ini_options]
addopts = "--nbmake ../notebooks/ -n auto"
